[gd_scene load_steps=4 format=3 uid="uid://b7x6g0vuiau5t"]

[ext_resource type="Script" path="res://Scripts/Main/back_button.gd" id="1_75jc3"]
[ext_resource type="Script" path="res://Scripts/Main/ReAttach/re_attach_scene.gd" id="1_q28r1"]
[ext_resource type="Texture2D" uid="uid://cvjho764tbp2w" path="res://Textures/LightOff.PNG" id="3_0jct8"]

[node name="ReAttachScene" type="Node2D"]
script = ExtResource("1_q28r1")

[node name="BackgroundSprite2D" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="DEBUG_BGPolygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(0.254902, 0.254902, 0.254902, 1)
polygon = PackedVector2Array(0, 0, 1280, 0, 1280, 736, 0, 736)

[node name="BackButton" type="Button" parent="."]
offset_left = 608.0
offset_right = 672.0
offset_bottom = 32.0
text = "^^^"
script = ExtResource("1_75jc3")
enterAnimationName = "panel1_exit"

[node name="AttachedCabels" type="Node2D" parent="."]

[node name="ReAttachmentDevice" type="Node2D" parent="."]
position = Vector2(992, 96)

[node name="DeviceSprite2D" type="Sprite2D" parent="ReAttachmentDevice"]

[node name="DEBUG_DevicePolygon2D" type="Polygon2D" parent="ReAttachmentDevice"]
scale = Vector2(1, 0.944444)
polygon = PackedVector2Array(0, 0, 256, 0, 256, 576, 126.516, 576, 0, 576)

[node name="Lights" type="Node2D" parent="ReAttachmentDevice"]

[node name="LightSprite2D1" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D2" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 112)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D3" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 144)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D4" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 176)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D5" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 208)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D6" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 240)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D7" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 272)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D8" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 304)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D9" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 336)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="LightSprite2D10" type="Sprite2D" parent="ReAttachmentDevice/Lights"]
position = Vector2(176, 368)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0jct8")

[node name="AttachEntries" type="Node2D" parent="ReAttachmentDevice"]

[connection signal="button_down" from="BackButton" to="BackButton" method="_on_button_down"]
